coderabbit and fixed client and server style